# video-to-3d

./: .gitignore  01_extract_frames.py  02_run_colmap.py  03_train_gaussian.py  04_semantic_lift.py  05_export.py  DESIGN.md  README.md  checkpoint_paths.py  colmap_paths.py  device.py  env_utils.py  mushroom_paths.py  patch_groundingdino.py  patch_gsplat_non_cuda.py  patch_nerfstudio_mps.py  patch_torch_load.py  pipeline.py  pyproject.toml  run_ns_train.py  run_ns_viewer.py
docs/: CLOUD_GPU.md  MUSHROOM.md
examples/: README.md
input/: download_mushroom.py  prepare_mushroom_images.py
input/MuSHRoom/: TRAINING.md
scripts/: ensure_env.py  prepare_examples.py  reset_gsplat.sh  setup_cloud.sh
