[project]
name = "video3d"
version = "0.1.0"
description = "3D scene reconstruction from video via COLMAP and 3D Gaussian Splatting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gsplat>=1.0",
    "nerfstudio>=1.1",
    "numpy>=2.2.6",
    "open3d>=0.19.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pycolmap>=4.0.4",
    "rich>=15.0.0",
    "scipy>=1.15.3",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "tyro>=1.0.13",
]

[tool.uv]
python-version = "3.10"
