[project]
name = "video3d"
version = "0.1.0"
description = "3D scene reconstruction from video via COLMAP and 3D Gaussian Splatting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gsplat>=1.0",
    "nerfstudio>=1.1",
    "numpy>=2.2.6",
    "open3d>=0.19.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pycolmap>=4.0.4",
    "rich>=15.0.0",
    "scipy>=1.15.3",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "tqdm>=4.67.3",
    "tyro>=1.0.13",
]

[tool.uv]
required-version = ">=0.11"
# Keep PyTorch on the pinned CUDA stack even when other deps request newer torch.
override-dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124", marker = "sys_platform == 'linux'" }
torchvision = { index = "pytorch-cu124", marker = "sys_platform == 'linux'" }
torchaudio = { index = "pytorch-cu124", marker = "sys_platform == 'linux'" }
